--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div id="id_elora"></div>
-    <div>elora added edit xx</div>
+    <div>elora added edit xx xx</div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
